# PK_SO_PROJECT_DRONE_SWARM

./: .gitignore  CMakeLists.txt  ZARYCKI_STANISŁAW_155316_opis_RÓJ_DRONÓW.md
include/: utils.h
src/: main.c  utils.c
